Template and import bug

--- a/pardakht/templates/pardakht/base.html
+++ b/pardakht/templates/pardakht/base.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link
             rel="stylesheet"
-            href="{% if LANGUAGE_BIDI %}{% static 'pardakht/semantic/semantic.rtl.min.css' %}{% else %}{% static 'pardakht/semantic/semantic.min.css' %}{% endif %}"
+            href="{% static 'pardakht/semantic/semantic.rtl.min.css' %}"
     >
     <link rel="stylesheet" href="{% static 'pardakht/css/styles.css' %}">
     <script src="{% static 'pardakht/js/jquery.min.js' %}"></script>
