--- a/pardakht/templates/pardakht/base.html
+++ b/pardakht/templates/pardakht/base.html
@@ -19,7 +19,7 @@
 
     {% block extra_header %}{% endblock %}
 </head>
-<body {% if LANGUAGE_BIDI %}dir="rtl"{% endif %} style="background-color: #ebebeb">
+<body dir="rtl" style="background-color: #ebebeb">
     {% block body %}
         <div class="ui container" style="margin-top: 2em; width: 60vw;">
             {% block container %}
